--- a/style.css/style.css
+++ b/style.css/style.css
@@ -63,7 +63,7 @@ header {
   text-decoration: none;
   color: rgb(255, 255, 255);
   font-family: Inter;
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 400;
   line-height: 120%;
   letter-spacing: 0%;
@@ -76,7 +76,7 @@ header {
   background: rgb(230, 83, 60);
   color: rgb(255, 255, 255);
   font-family: Inter;
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 600;
   line-height: 22px;
   letter-spacing: 0%;
@@ -100,7 +100,7 @@ header {
 .banner__text--container h1 {
   color: rgb(255, 255, 255);
   font-family: Inter;
-  font-size: 78px;
+  font-size: 4.8rem;
   font-weight: 900;
   line-height: 120%;
   letter-spacing: 0%;
@@ -115,7 +115,7 @@ header {
 .banner__text--container p {
   color: rgba(255, 255, 255, 0.5);
   font-family: Inter;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.5px;
@@ -138,7 +138,7 @@ header {
   background: rgb(230, 83, 60);
   color: rgb(255, 255, 255);
   font-family: Inter;
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 600;
   line-height: 22px;
   letter-spacing: 0px;
@@ -189,7 +189,7 @@ header {
 .div350 h4 {
   color: rgb(250, 250, 249);
   font-family: Inter;
-  font-size: 24px;
+  font-size: 2rem;
   font-weight: 900;
   line-height: 24px;
   letter-spacing: 0.3px;
@@ -199,7 +199,7 @@ header {
 .div350 p {
   color: rgba(239, 237, 232, 0.65);
   font-family: Inter;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.5px;
@@ -235,9 +235,21 @@ header {
 .div500 p {
   color: rgba(255, 255, 255, 0.65);
   font-family: Inter;
-  font-size: 13px;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 20px;
   letter-spacing: 1px;
   text-align: left;
+}
+
+
+/* main */
+
+/* change__habit--section */
+.change__habit--section {
+  width: 1044px;
+height: 452px;
+margin: 0 auto;
+margin-top: 100px;
+border: 2px solid rebeccapurple;
 }
