--- a/style.css/style.css
+++ b/style.css/style.css
@@ -14,6 +14,7 @@ body {
   margin: 0 auto;
   border: 2px solid red;
   font-family: "Inter", sans-serif;
+  background-color: #000000;
 }
 
 /* header */
@@ -242,14 +243,78 @@ header {
   text-align: left;
 }
 
-
 /* main */
 
 /* change__habit--section */
 .change__habit--section {
   width: 1044px;
-height: 452px;
-margin: 0 auto;
-margin-top: 100px;
-border: 2px solid rebeccapurple;
+  height: 452px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+.habit__text--container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.habit__text--container h2 {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 14px;
+}
+
+.habit__text--container p {
+  width: 671px;
+  height: 48px;
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: center;
+  margin-bottom: 54px;
+}
+
+.habit__image--container {
+  display: flex;
+}
+
+.image__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image__container h4 {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-top: 30px;
+  margin-bottom: 6px;
+}
+
+.image__container p {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 0.87rem;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0.3px;
+  text-align: center;
+}
+
+.image img {
+  border-radius: 50%;
 }
