--- a/style.css/style.css
+++ b/style.css/style.css
@@ -318,3 +318,72 @@ header {
 .image img {
   border-radius: 50%;
 }
+
+/* extra mile section */
+.extra__mile--section {
+  width: 1060px;
+  height: 371px;
+  border-radius: 18px;
+  background: rgb(34, 34, 34);
+  margin: 0 auto;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
+}
+
+.extra__mile--contents {
+  width: 443px;
+  height: 290px;
+}
+
+.extra__mile--contents h2 {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 12px;
+}
+
+.extra__mile--contents p {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 0.87rem;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.extra__mile--contents #join__btn {
+  width: 224px;
+  height: 54px;
+  padding: 16px 40px 16px 40px;
+  margin: 34px 0px;
+  border-radius: 42px;
+  border: none;
+  background: rgb(230, 83, 60);
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 1.12rem;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+
+.extra__mile--image {
+  width: 366px;
+  height: 312px;
+}
+
+.extra__mile--image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+}
