--- a/style.css/style.css
+++ b/style.css/style.css
@@ -527,6 +527,17 @@ th {
   margin-left: -12px;
 }
 
+.calculate__form input::placeholder,
+.calculate__form select::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Inter;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
 .calculate__form .form1,
 .form2 {
   display: flex;
@@ -585,4 +596,92 @@ th {
   letter-spacing: 0px;
   text-align: center;
   cursor: pointer;
+}
+
+/* team section */
+.team-section {
+  max-width: 1060px;
+  height: 782px;
+  margin: 0 auto;
+  margin-top: 88px;
+}
+
+.team__contents {
+  max-width: 671px;
+  height: 120px;
+  margin: 0 auto;
+  margin-bottom: 48px;
+}
+
+.team__contents__title {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: center;
+  margin-bottom: 14px;
+}
+
+.team__contents__description {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: center;
+}
+
+.team__images {
+  max-width: 1060px;
+  height: 604px;
+  padding: 20px;
+  margin: 0px 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  border-radius: 18px;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.team__image {
+  max-width: 326.67px;
+  height: 272px;
+}
+
+.team__image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
+  opacity: 85%;
+}
+
+.team__image__title,
+.team__image__description {
+  /* transform: translate(-50%, -50%); */
+  position: relative;
+  bottom: 25%;
+  left: 5%;
+}
+
+.team__image__title {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 1rem;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.team__image__description {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 0.87rem;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
 }
