--- a/style.css/style.css
+++ b/style.css/style.css
@@ -685,3 +685,107 @@ th {
   letter-spacing: 0.3px;
   text-align: left;
 }
+
+/* footer */
+.footer {
+  max-width: 1440px;
+  height: 489px;
+  background-color: #1a1a1a;
+  margin-top: 88px;
+  /* padding-top: 1px; */
+  border: 1px solid transparent;
+}
+
+.footer-content {
+  width: 1059px;
+  height: 249px;
+  margin: 0 auto;
+  margin-top: 66px;
+  margin-bottom: 79px;
+  display: flex;
+}
+
+.footer__fitness__content {
+  width: 50%;
+  height: auto;
+}
+
+.footer__fitness__title {
+  color: rgb(230, 83, 60);
+  font-family: Inter;
+  font-size: 4.37rem;
+  font-weight: 800;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.footer__fitness__description {
+  max-width: 443px;
+  height: 72px;
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 0.87rem;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.footer__get__started__content {
+  width: 50%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.get__started__one {
+}
+
+.get__started__two {
+}
+
+.get__started__title {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 39px;
+}
+
+.get__started__description {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 1.44rem;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.horizontal__row {
+  width: 1059.5px;
+  height: 0;
+  border: 2px solid rgba(255, 255, 255, 0.1);
+  margin: 0 auto;
+}
+
+.footer__description {
+  width: 328px;
+  height: 24px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 36px;
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
