--- a/style.css/style.css
+++ b/style.css/style.css
@@ -7,6 +7,11 @@
   padding: 0;
 }
 
+/* display hide */
+#display--hide {
+  display: none;
+}
+
 body {
   width: 100%;
   max-width: 1440px;
@@ -395,6 +400,67 @@ header {
   border: 2px solid rebeccapurple;
   margin: 0 auto;
   margin-top: 100px;
+}
+
+.trainings__section__content {
+  max-width: 671px;
+  height: 120px;
+  margin-bottom: 58px;
+  border: 2px solid rebeccapurple;
+}
+
+.trainings__content__title {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 14px;
+}
+
+.trainings__content__description {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 0.87rem;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.training__section__images {
+  width: 1060px;
+  height: auto;
+  border: 2px solid greenyellow;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.training__image {
+  position: relative;
+  overflow: hidden;
+}
+
+.training__image img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.training__image p {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0px;
+  text-align: left;
 }
 
 /* BMI Content */
