--- a/style.css/style.css
+++ b/style.css/style.css
@@ -624,6 +624,7 @@ th {
   padding: 12px 20px;
   margin: 0px 12px;
   border-radius: 8px;
+  border: none;
   background: rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.6);
   font-family: Inter;
@@ -648,6 +649,7 @@ th {
   line-height: 22px;
   letter-spacing: 0px;
   text-align: left;
+  border: none;
 }
 
 #calculate__btn {
