--- a/style/mobile.css
+++ b/style/mobile.css
@@ -1,2 +1,178 @@
 /* @media screen and (max-width: 576px)  */
 
+/* header */
+header {
+  width: 100%;
+  height: auto;
+  padding-left: 20px;
+  overflow: hidden;
+}
+
+/* nav */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.navtitle {
+  font-size: 2rem;
+  line-height: 100%;
+}
+
+.nav__list {
+  border: none;
+}
+
+.nav__item {
+  display: none;
+}
+
+.bar__icon {
+  display: block;
+  width: 90%;
+  height: auto;
+  text-align: center;
+}
+
+.nav__item a {
+  font-size: 1rem;
+  line-height: 100%;
+}
+
+/* banner */
+.banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+.banner__text--container {
+  width: 100%;
+  height: auto;
+  margin-top: 70px;
+  margin-right: 0;
+  margin-left: 0px;
+}
+
+.banner__text--container h1 {
+  width: 80%;
+  height: auto;
+  font-size: 3rem;
+  font-weight: 900;
+  line-height: 100%;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.banner__text--container p {
+  width: 80%;
+  height: auto;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+  text-align: left;
+  margin-bottom: 28px;
+}
+
+.banner__btn {
+  display: flex;
+  justify-content: flex-start;
+  gap: 14px;
+}
+
+.join__btn,
+.download__btn {
+  max-width: 169px;
+  height: 54px;
+  padding: 0;
+  border-radius: 42px;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 20px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.download__btn {
+  border: 1px solid rgb(255, 255, 255);
+  background-color: #111111;
+  color: rgb(255, 255, 255);
+}
+
+.banner__image--container {
+  max-width: 353px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-top: 48px;
+}
+
+.banner__image {
+  width: 100%;
+  max-width: 353px;
+  height: auto;
+}
+
+.banner__image img {
+  width: 100%;
+  height: 100%;
+}
+
+.div350 {
+  max-width: 155.74px;
+  height: 72.58px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  position: absolute;
+  top: 280px;
+  left: 10px;
+}
+
+.div350 h4 {
+  font-size: 1.2rem;
+  font-weight: 900;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.div350 p {
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.1px;
+  text-align: left;
+}
+
+.div500 {
+  max-width: 145.91px;
+  height: 74.09px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  position: absolute;
+  top: 50px;
+  right: 15px;
+}
+
+.div500 h4 {
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 35px;
+}
+
+.div500 p {
+  font-size: 0.7rem;
+  font-weight: 400;
+  line-height: 18px;
+}
