--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,6 @@ body {
   max-width: 1440px;
   height: auto;
   margin: 0 auto;
-  border: 2px solid red;
   font-family: "Inter", sans-serif;
   background-color: #000000;
 }
@@ -30,6 +29,7 @@ header {
   /* background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%); */
   background-color: #232323;
   border: 2px solid;
+  padding-left: 20px;
 }
 
 /* nav */
@@ -89,6 +89,10 @@ header {
   text-align: left;
 }
 
+.bar__icon {
+  display: none;
+}
+
 /* banner */
 .banner {
   display: flex;
@@ -141,6 +145,7 @@ header {
   height: 54px;
   padding: 16px 40px 16px 40px;
   border-radius: 42px;
+  border: none;
   background: rgb(230, 83, 60);
   color: rgb(255, 255, 255);
   font-family: Inter;
