Responsive change your habit section added

--- a/style/mobile.css
+++ b/style/mobile.css
@@ -176,3 +176,70 @@ header {
   font-weight: 400;
   line-height: 18px;
 }
+
+/* main */
+
+/* change__habit--section */
+.change__habit--section {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.habit__text--container {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.habit__text--container h2 {
+  max-width: 318px;
+  height: auto;
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 100%;
+  text-align: center;
+  margin-bottom: 14px;
+}
+
+.habit__text--container p {
+  width: 100%;
+  height: auto;
+  font-size: 0.87rem;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  text-align: center;
+  margin-bottom: 54px;
+}
+
+.habit__image--container {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
+.image__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image__container h4 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 100%;
+  text-align: left;
+  margin-top: 15px;
+  margin-bottom: 6px;
+}
+
+.image__container p {
+  font-size: 0.8rem;
+  line-height: 14px;
+  letter-spacing: 0.3px;
+  text-align: center;
+}
