--- a/style/tab.css
+++ b/style/tab.css
@@ -242,3 +242,65 @@ header {
   letter-spacing: 0.3px;
   text-align: center;
 }
+
+/* extra mile section */
+.extra__mile--section {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+}
+
+.extra__mile--contents {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 50px;
+}
+
+.extra__mile--contents h2 {
+  width: 90%;
+  height: auto;
+  font-size: 2rem;
+  line-height: 120%;
+  margin-bottom: 12px;
+}
+
+.extra__mile--contents p {
+  width: 90%;
+  height: auto;
+  font-size: 0.8rem;
+  line-height: 20px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.extra__mile--contents #join__btn {
+  width: 40%;
+  height: 54px;
+  padding: 0;
+  margin: 24px 0px;
+  border-radius: 42px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 22px;
+}
+
+.extra__mile--image {
+  max-width: 256px;
+  height: 319px;
+  padding: 30px;
+}
+
+.extra__mile--image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
+}
