--- a/style/tab.css
+++ b/style/tab.css
@@ -444,9 +444,75 @@ th {
 
 #calculate__btn {
   width: 80%;
-  height: auto;
+  height: 54px;
   padding: 0;
   margin: 34px 0px;
   border-radius: 42px;
   font-size: 1.1rem;
+}
+
+/* team section */
+.team-section {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  margin-top: 66px;
+}
+
+.team__contents {
+  width: 90%;
+  height: auto;
+  margin: 0 auto;
+  margin-bottom: 48px;
+}
+
+.team__contents__title {
+  width: 100%;
+  height: auto;
+  font-size: 2rem;
+  margin-bottom: 14px;
+}
+
+.team__contents__description {
+  width: 100%;
+  height: auto;
+  font-size: 0.8rem;
+}
+
+.team__images {
+width: 80%;
+height: auto;
+  padding: 10px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.team__image {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.team__image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 18px;
+  opacity: 85%;
+}
+
+.team__image__title,
+.team__image__description {
+  position: relative;
+  bottom: 25%;
+  left: 5%;
+}
+
+.team__image__title {
+  font-size: 0.95rem;
+}
+
+.team__image__description {
+  font-size: 0.8rem;
 }
