--- a/style/style.css
+++ b/style/style.css
@@ -302,14 +302,14 @@ header {
 
 /* change__habit--section end */
 
-/* extra mile section */
+/* extra mile section start */
 .extra__mile--section {
   width: 1060px;
   height: 371px;
   border-radius: 18px;
   background: rgb(34, 34, 34);
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 82px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -323,39 +323,32 @@ header {
 
 .extra__mile--contents h2 {
   color: rgb(255, 255, 255);
-  font-family: Inter;
-  font-size: 3rem;
+  font-size: 2.46rem;
   font-weight: 900;
   line-height: 120%;
-  letter-spacing: 0%;
-  text-align: left;
   margin-bottom: 12px;
 }
 
 .extra__mile--contents p {
   color: rgba(255, 255, 255, 0.5);
-  font-family: Inter;
-  font-size: 0.87rem;
+  font-size: 0.82rem;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.3px;
-  text-align: left;
 }
 
 .extra__mile--contents #join__btn {
-  width: 224px;
-  height: 54px;
-  padding: 16px 40px 16px 40px;
+  width: 184px;
+  height: 50px;
+  padding: 13px 33px;
   margin: 34px 0px;
   border-radius: 42px;
   border: none;
   background: rgb(230, 83, 60);
   color: rgb(255, 255, 255);
-  font-family: Inter;
-  font-size: 1.12rem;
+  font-size: 1rem;
   font-weight: 600;
   line-height: 22px;
-  letter-spacing: 0px;
   text-align: center;
   cursor: pointer;
 }
@@ -369,8 +362,10 @@ header {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: 86%;
   border-radius: 18px;
 }
+/* extra mile section end */
 
 /* trainings__section */
 /*  
