--- a/style/style.css
+++ b/style/style.css
@@ -623,12 +623,12 @@ th {
 
 /* BMI__calculator--section end */
 
-/* team section */
+/* team section start */
 .team-section {
   max-width: 1060px;
   height: 782px;
   margin: 0 auto;
-  margin-top: 88px;
+  margin-top: 82px;
 }
 
 .team__contents {
@@ -640,33 +640,33 @@ th {
 
 .team__contents__title {
   color: rgb(255, 255, 255);
-  font-family: Inter;
-  font-size: 3rem;
+  font-size: 2.46rem;
   font-weight: 900;
   line-height: 120%;
-  letter-spacing: 0%;
   text-align: center;
   margin-bottom: 14px;
 }
 
 .team__contents__description {
+  width: 550px;
+  height: 44px;
   color: rgba(255, 255, 255, 0.5);
-  font-family: Inter;
-  font-size: 14px;
+  font-size: 0.82rem;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.3px;
   text-align: center;
+  margin: 0 auto;
 }
 
 .team__images {
   max-width: 1060px;
   height: 604px;
-  padding: 20px;
+  padding: 16px;
   margin: 0px 20px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 16px;
   border-radius: 18px;
   background: rgba(255, 255, 255, 0.1);
 }
@@ -693,12 +693,9 @@ th {
 
 .team__image__title {
   color: rgb(255, 255, 255);
-  font-family: Inter;
   font-size: 1rem;
   font-weight: 900;
   line-height: 120%;
-  letter-spacing: 0%;
-  text-align: left;
 }
 
 .team__image__description {
@@ -708,8 +705,9 @@ th {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.3px;
-  text-align: left;
 }
+
+/* team section end */
 
 /* footer */
 .footer {
