--- a/style/style.css
+++ b/style/style.css
@@ -22,12 +22,10 @@ body {
 
 /* header */
 header {
-  width: 100%;
-  max-width: 1440px;
+  max-width: 1180px;
   height: auto;
   background-color: #232323;
   border: 2px solid;
-  /* padding-left: 20px; */
 }
 
 /* nav */
@@ -118,9 +116,7 @@ header {
 }
 
 .banner__btn {
-  /* border: 2px solid rebeccapurple; */
   display: flex;
-  /* justify-content: flex-start; */
   gap: 14px;
 }
 
@@ -224,8 +220,6 @@ header {
   align-items: center;
   justify-content: center;
   position: absolute;
-  /* top: 140px;
-  right: 30px; */
   top: 20%;
   left: 60%;
 }
@@ -246,7 +240,7 @@ header {
   letter-spacing: 1px;
 }
 
-/* main */
+/* main start */
 
 /* change__habit--section start */
 .change__habit--section {
@@ -381,78 +375,6 @@ header {
 }
 /* extra mile section end */
 
-/* trainings__section */
-/*  
-.trainings__section {
-  width: 1060px;
-  height: 581px;
-  border: 2px solid rebeccapurple;
-  margin: 0 auto;
-  margin-top: 100px;
-}
-
-.trainings__section__content {
-  max-width: 671px;
-  height: 120px;
-  margin-bottom: 58px;
-  border: 2px solid rebeccapurple;
-}
-
-.trainings__content__title {
-  color: rgb(255, 255, 255);
-  font-family: Inter;
-  font-size: 3rem;
-  font-weight: 900;
-  line-height: 120%;
-  letter-spacing: 0%;
-  text-align: left;
-  margin-bottom: 14px;
-}
-
-.trainings__content__description {
-  color: rgba(255, 255, 255, 0.5);
-  font-family: Inter;
-  font-size: 0.87rem;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.3px;
-  text-align: left;
-}
-
-.training__section__images {
-  width: 1060px;
-  height: auto;
-  border: 2px solid greenyellow;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-}
-
-.training__image {
-  position: relative;
-  overflow: hidden;
-}
-
-.training__image img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.training__image p {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  color: rgb(255, 255, 255);
-  font-family: Inter;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 17px;
-  letter-spacing: 0px;
-  text-align: left;
-}
-*/
-
 /* BMI content start */
 .BMI__content {
   width: 671px;
@@ -497,7 +419,6 @@ header {
 
 .BMI__chart h3 {
   color: rgb(255, 255, 255);
-  font-family: Inter;
   font-size: 1.5rem;
   font-weight: 900;
   line-height: 120%;
@@ -598,7 +519,6 @@ th {
   border: none;
   background: rgba(255, 255, 255, 0.1);
   color: rgba(255, 255, 255, 0.6);
-  font-family: Inter;
   font-size: 0.87rem;
   font-weight: 400;
   line-height: 22px;
@@ -695,11 +615,11 @@ th {
   height: 100%;
   border-radius: 18px;
   opacity: 85%;
+  object-fit: cover;
 }
 
 .team__image__title,
 .team__image__description {
-  /* transform: translate(-50%, -50%); */
   position: relative;
   bottom: 25%;
   left: 5%;
@@ -773,7 +693,6 @@ th {
 
 .get__started__title {
   color: rgb(255, 255, 255);
-  font-family: Inter;
   font-size: 1.64rem;
   font-weight: 700;
   line-height: 120%;
@@ -782,7 +701,6 @@ th {
 
 .get__started__description {
   color: rgba(255, 255, 255, 0.5);
-  font-family: Inter;
   font-size: 0.87rem;
   font-weight: 400;
   line-height: 120%;
@@ -804,7 +722,6 @@ th {
   margin: 0 auto;
   margin-top: 36px;
   color: rgba(255, 255, 255, 0.5);
-  font-family: Inter;
   font-size: 1rem;
   font-weight: 400;
   line-height: 24px;
