--- a/style/style.css
+++ b/style/style.css
@@ -375,6 +375,149 @@ header {
 }
 /* extra mile section end */
 
+/* training section start */
+.training-section {
+  width: 1060px;
+  height: 371px;
+  margin: 0 auto;
+  margin-top: 82px;
+}
+
+.training__content {
+  max-width: 671px;
+  height: 120px;
+  margin-bottom: 40px;
+}
+
+.training__content-title {
+  color: rgb(255, 255, 255);
+  font-size: 2.46rem;
+  font-weight: 900;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-align: left;
+  margin-bottom: 11px;
+}
+
+.training__content-description {
+  max-width: 671px;
+  height: 48px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.82rem;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  text-align: left;
+}
+
+.training__picture {
+  display: flex;
+  flex-direction: column;
+}
+
+.training__div-1 {
+  display: grid;
+  grid-template-columns: 0.2fr 0.5fr 0.3fr;
+  width: 100%;
+  position: relative;
+}
+
+.training__div-2 {
+  display: grid;
+  grid-template-columns: 0.4fr 0.3fr 0.3fr;
+  width: 100%;
+  position: relative;
+}
+
+.training__card-1,
+.training__card-2,
+.training__card-3,
+.training__card-4,
+.training__card-5,
+.training__card-6 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 218px;
+}
+
+.training__card-1 {
+  background-image: url(../images/exercise1.jpg);
+  background-color: rgba(6, 255, 210, 0.5);
+  background-blend-mode: overlay;
+}
+
+.training__card-2 {
+  background-image: url(../images/exercise2.png);
+  background-color: rgba(255, 0, 0, 0.3);
+  background-blend-mode: overlay;
+}
+
+.training__card-3 {
+  background-image: url(../images/exercise3.png);
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: overlay;
+}
+
+.training__card-4 {
+  background-image: url(../images/exercise4.png);
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: overlay;
+}
+
+.training__card-5 {
+  background-image: url(../images/exercise5.jpg);
+  background-color: rgba(66, 255, 0, 0.3);
+  background-blend-mode: overlay;
+}
+
+.training__card-6 {
+  background-image: url(../images/exercise6.jpg);
+  background-color: rgba(0, 71, 255, 0.3);
+  background-blend-mode: overlay;
+}
+
+.training__div-1 p,
+.training__div-2 p {
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
+.training__card-1 p {
+  color: black;
+}
+
+.training__card-2 p {
+  position: relative;
+  top: 15%;
+  left: 7%;
+}
+
+.training__card-1 p,
+.training__card-3 p,
+.training__card-5 p,
+.training__card-6 p {
+  width: 144px;
+  height: 31px;
+  position: relative;
+  top: 71%;
+  left: 6%;
+}
+
+.training__card-4 p {
+  width: 144px;
+  height: 31px;
+  position: relative;
+  top: 18%;
+  left: 58%;
+}
+
+/* training section end */
+
 /* BMI content start */
 .BMI__content {
   width: 671px;
