--- a/style/mobile.css
+++ b/style/mobile.css
@@ -86,16 +86,13 @@ header {
 
 .join__btn,
 .download__btn {
-  max-width: 169px;
-  height: 54px;
+  width: 138px;
+  height: 50px;
   padding: 0;
   border-radius: 42px;
   font-size: 1rem;
   font-weight: 600;
   line-height: 20px;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
 }
 
 .download__btn {
@@ -133,8 +130,8 @@ header {
   align-items: center;
   justify-content: center; */
   position: absolute;
-  top: 280px;
-  left: 10px;
+  top: 45%;
+  left: 0%;
 }
 
 .div350 h4 {
@@ -161,8 +158,8 @@ header {
   align-items: center;
   justify-content: center; */
   position: absolute;
-  top: 50px;
-  right: 15px;
+  top: 10%;
+  left: 60%;
 }
 
 .div500 h4 {
@@ -246,7 +243,7 @@ header {
 
 /* extra mile section */
 .extra__mile--section {
-  width: 100%;
+  width: 90%;
   height: auto;
   margin: 0 auto;
   margin-top: 100px;
@@ -261,6 +258,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 25px;
 }
 
 .extra__mile--contents h2 {
