--- a/style/tab.css
+++ b/style/tab.css
@@ -14,6 +14,7 @@ header {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
+    padding: 0 20px;
   }
   
   .navtitle {
@@ -22,9 +23,6 @@ header {
   }
 
   .nav__list {
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
     gap: 17px;
     padding: 8px 5px;
     margin: 0px 10px;
@@ -50,15 +48,16 @@ header {
   .banner__text--container {
     width: 100%;
     height: auto;
-    margin-top: 80px;
+    margin-top: 65px;
     margin-right: 0;
     margin-left: 0px;
+    padding: 0 20px;
   }
   
   .banner__text--container h1 {
     width: 90%;
     height: auto;
-    font-size: 4.8rem;
+    font-size: 4.2rem;
     font-weight: 900;
     line-height: 110%;
     text-align: left;
@@ -68,7 +67,7 @@ header {
   .banner__text--container p {
     width: 90%;
     height: auto;
-    font-size: 1rem;
+    font-size: 0.87rem;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0.3px;
@@ -84,16 +83,13 @@ header {
   
   .join__btn,
   .download__btn {
-    max-width: 169px;
+    width: 169px;
     height: 54px;
     padding: 0;
     border-radius: 42px;
     font-size: 1.1rem;
     font-weight: 600;
     line-height: 22px;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
   }
   
   .download__btn {
@@ -131,8 +127,8 @@ header {
     align-items: center;
     justify-content: center; */
     position: absolute;
-    top: 280px;
-    left: 10px;
+    top: 45%;
+    left: 0%;
   }
   
   .div350 h4 {
@@ -159,8 +155,8 @@ header {
     align-items: center;
     justify-content: center; */
     position: absolute;
-    top: 50px;
-    right: 15px;
+    top: 10%;
+    left: 55%;
   }
   
   .div500 h4 {
@@ -245,7 +241,7 @@ header {
 
 /* extra mile section */
 .extra__mile--section {
-  width: 100%;
+  width: 95%;
   height: auto;
   margin: 0 auto;
   margin-top: 100px;
